--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "body-parser": "^1.14.1",
     "es6-promise": "^3.0.2",
     "express": "^4.13.3",
-    "jsonwebtoken": "^5.4.1",
+    "jwt-simple": "^0.4.0",
     "moment": "^2.10.6",
     "mongodb": "^2.0.52",
     "qiniu": "^6.1.9"
