--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.10.6",
     "mongodb": "^2.0.52",
     "mongoose": "^4.4.8",
+    "nodemailer": "^2.3.0",
     "qiniu": "^6.1.9"
   }
 }
