--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.10.6",
     "mongodb": "^2.0.52",
     "mongoose": "^4.4.8",
+    "morgan": "^1.7.0",
     "nodemailer": "^2.3.0",
     "qiniu": "^6.1.9"
   }
