--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.14.1",
     "es6-promise": "^3.0.2",
     "express": "^4.13.3",
+    "file-stream-rotator": "0.0.6",
     "jssha": "^2.0.2",
     "jwt-simple": "^0.4.0",
     "md5": "^2.0.0",
